--- a/source/assets/homepage/projects.html
+++ b/source/assets/homepage/projects.html
@@ -1,5 +1,5 @@
-<h1 class="text-center pt-3">Projects</h1>
-<div class="card border border-dark bg-dark">
+<h1 class="text-center pt-3 text-light">Projects</h1>
+<div class="card border border-dark bg-dark text-light">
   <div class="card-body">
     <h5 class="card-title">Google Trends Election Predictor</h5>
     <p class="card-text">
@@ -16,7 +16,7 @@
     >
   </div>
 </div>
-<div class="card border border-dark bg-dark">
+<div class="card border border-dark bg-dark text-light">
   <div class="card-body">
     <h5 class="card-title">MyMICDS.net</h5>
     <p class="card-text">
