--- a/source/index.html
+++ b/source/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="height:100%">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
@@ -72,16 +72,13 @@
     <link type="text/css" rel="stylesheet" href="assets/styles/style.css" />
     <title>SamBaumohl.com</title>
   </head>
-  <body class="bg-dark">
-    <div
-      class="parallax text-dark"
-      style="height: 38rem;display: flex;align-items: center;"
-    >
-      <div class="mx-auto">
-        <h1 class="position-relative text-center pt-5">
+  <body class="bg-dark text-dark">
+    <div class="parallax fill-screen flex-center">
+      <div class="d-inline-block">
+        <h1 class="position-relative text-center">
           SamBaumohl.com
         </h1>
-        <h4 class="text-center d-block pb-md-5 mb-0">
+        <h4 class="text-center d-block mb-0">
           I am Sam Baumohl, a student and a junior developer.
         </h4>
       </div>
@@ -91,7 +88,7 @@
 
     <div class="parallax pb-4 mt-3" id="debate"></div>
 
-    <div class="text-light pb-4 mt-3" id="projects"></div>
+    <div class="pb-4 mt-3" id="projects"></div>
 
     <div class="parallax pb-4 mt-3" id="resume"></div>
 
@@ -107,7 +104,7 @@
           <a href="https://expressjs.com/">Express JS</a>, and
           <a href="https://konpa.github.io/devicon/">icons</a>.
         </p>
-        <p>Website Version 2.0</p>
+        <p>Website Version 2.1</p>
       </div>
     </div>
     <!-- Optional JavaScript -->
