Add more Whitespace

--- a/source/assets/homepage/debate.html
+++ b/source/assets/homepage/debate.html
@@ -1,5 +1,5 @@
-<h1 class="text-center pt-3">Debate Casefiles</h1>
-<p class="text-center pt-0">
+<h1 class="text-center py-5">Debate Casefiles</h1>
+<p class="text-center pt-0 pb-4">
   These casefiles are a mix of evidence I gathered and pre-annotated evidence I
   found. I do not own any/all of the work in these files. These are simply the
   casefiles I used in tournaments.
@@ -7,7 +7,10 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col px-1 py-2">
-      <div class="card shadow-lg mx-auto" style="width: 19rem;">
+      <div
+        class="card shadow-lg mx-auto"
+        style="width: 19rem; min-height:16rem;"
+      >
         <div class="card-body">
           <h5 class="card-title">
             Public Forum Beedev Meme Casefile
@@ -35,7 +38,10 @@
       </div>
     </div>
     <div class="col px-1 py-2">
-      <div class="card shadow-lg mx-auto" style="width: 19rem;">
+      <div
+        class="card shadow-lg mx-auto"
+        style="width: 19rem; min-height:16rem;"
+      >
         <div class="card-body">
           <h5 class="card-title">
             Lincoln-Douglas Casefile
@@ -62,7 +68,10 @@
       </div>
     </div>
     <div class="col px-1 py-2">
-      <div class="card shadow-lg mx-auto" style="width: 19rem;">
+      <div
+        class="card shadow-lg mx-auto"
+        style="width: 19rem; min-height:16rem;"
+      >
         <div class="card-body">
           <h5 class="card-title">
             Lincoln-Douglas Casefile
