--- a/source/assets/homepage/projects.html
+++ b/source/assets/homepage/projects.html
@@ -1,4 +1,4 @@
-<h1 class="text-center pt-3 text-light">Projects</h1>
+<h1 class="text-center py-5 text-light">Projects</h1>
 <div class="card border border-dark bg-dark text-light">
   <div class="card-body">
     <h5 class="card-title">Google Trends Election Predictor</h5>
