--- a/source/assets/homepage/resume.html
+++ b/source/assets/homepage/resume.html
@@ -1,5 +1,5 @@
-<h1 class="text-center pt-3">Resume</h1>
-<div>
+<h1 class="text-center py-5">Resume</h1>
+<div class="pb-5">
   <div class="card mx-auto mb-xs-3" style="max-width: 25rem;" id="loginCard">
     <div class="card-body">
       <h5 class="card-title">Password Required</h5>
