--- a/source/assets/homepage/skills.html
+++ b/source/assets/homepage/skills.html
@@ -1,4 +1,4 @@
-<h1 class="text-light text-center pt-3">Skills</h1>
+<h1 class="text-light text-center py-4">Skills</h1>
 <div class="row py-3">
   <div class="col pt-3">
     <div class="card mx-auto border-0" style="width: 14rem;">
@@ -7,7 +7,7 @@
         src="assets/css3/css3-original.svg"
         alt="Card image cap"
       />
-      <div class="card-body bg-primary text-white">
+      <div class="card-body bg-info text-white">
         <h5 class="card-text text-center">CSS 3</h5>
       </div>
     </div>
@@ -19,7 +19,7 @@
         src="assets/html5/html5-original.svg"
         alt="Card image cap"
       />
-      <div class="card-body bg-primary text-white">
+      <div class="card-body bg-info text-white">
         <h5 class="card-text text-center">HTML 5</h5>
       </div>
     </div>
@@ -31,7 +31,7 @@
         src="assets/javascript/javascript-original.svg"
         alt="Card image cap"
       />
-      <div class="card-body bg-primary text-white">
+      <div class="card-body bg-info text-white">
         <h5 class="card-text text-center">Javascript</h5>
       </div>
     </div>
@@ -45,7 +45,7 @@
         src="assets/mysql/mysql-original-wordmark.svg"
         alt="Card image cap"
       />
-      <div class="card-body bg-primary text-white">
+      <div class="card-body bg-info text-white">
         <h5 class="card-text text-center">MySql</h5>
       </div>
     </div>
@@ -57,7 +57,7 @@
         src="assets/java/java-original.svg"
         alt="Card image cap"
       />
-      <div class="card-body bg-primary text-white">
+      <div class="card-body bg-info text-white">
         <h5 class="card-text text-center">Java</h5>
       </div>
     </div>
@@ -69,7 +69,7 @@
         src="assets/python/python-original.svg"
         alt="Card image cap"
       />
-      <div class="card-body bg-primary text-white">
+      <div class="card-body bg-info text-white">
         <h5 class="card-text text-center">Python 3</h5>
       </div>
     </div>
