--- a/source/index.html
+++ b/source/index.html
@@ -30,26 +30,6 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
-    <script>
-      window.jQuery ||
-        document.write(
-          '<script src="/assets/dependencies/jquery-3.4.1.min.js"><\/script>'
-        );
-      window.Popper ||
-        document.write(
-          '<script src="/assets/dependencies/popper.min.js"><\/script>'
-        );
-      typeof $().emulateTransitionEnd == "function" ||
-        document.write(
-          '<script src="/assets/dependencies/bootstrap.min.js"><\/script>'
-        );
-      $(function() {
-        $("#skills").load("/assets/homepage/skills.html");
-        $("#debate").load("/assets/homepage/debate.html");
-        $("#projects").load("/assets/homepage/projects.html");
-        $("#resume").load("/assets/homepage/resume.html");
-      });
-    </script>
     <!--other meta tags -->
     <link
       rel="apple-touch-icon"
@@ -88,7 +68,7 @@
 
     <div class="parallax pb-4 mt-3" id="debate"></div>
 
-    <div class="pb-4 mt-3" id="projects"></div>
+    <div class="pb-4 mt-3 text-white" id="projects"></div>
 
     <div class="parallax pb-4 mt-3" id="resume"></div>
 
@@ -112,6 +92,24 @@
       console.log(
         "super secret link: https://www.sambaumohl.com/passwords/secret.html"
       );
+      window.jQuery ||
+        document.write(
+          '<script src="/assets/dependencies/jquery-3.4.1.min.js"><\/script>'
+        );
+      window.Popper ||
+        document.write(
+          '<script src="/assets/dependencies/popper.min.js"><\/script>'
+        );
+      typeof $().emulateTransitionEnd == "function" ||
+        document.write(
+          '<script src="/assets/dependencies/bootstrap.min.js"><\/script>'
+        );
+      $(function() {
+        $("#skills").load("/assets/homepage/skills.html");
+        $("#debate").load("/assets/homepage/debate.html");
+        $("#projects").load("/assets/homepage/projects.html");
+        $("#resume").load("/assets/homepage/resume.html");
+      });
     </script>
   </body>
 </html>
