--- a/source/index.html
+++ b/source/index.html
@@ -53,7 +53,8 @@
       href="assets/icons/favicon-16x16.png"
     />
     <link rel="manifest" href="assets/icons/site.webmanifest" />
-    <link type="text/css" rel="stylesheet" href="assets/styles/style.css" />
+    <link type="text/css" rel="stylesheet" href="assets/styles/style.css" async/>
+    <script type="text/javascript" src="assets/scripts/resume.js" defer></script>
     <title>SamBaumohl.com</title>
   </head>
   <body class="bg-dark text-dark">
@@ -68,13 +69,255 @@
       </div>
     </div>
 
-    <div class="pb-4 mt-3 container-fluid" id="skills"></div>
+    <div class="pb-4 mt-3 container-fluid" id="skills">
+      <h1 class="text-light text-center py-4">Skills</h1>
+      <div class="row py-3">
+        <div class="col pt-3">
+          <div class="card mx-auto border-0" style="width: 14rem;">
+            <img
+              class="card-img-top"
+              src="assets/css3/css3-original.svg"
+              alt="Card image cap"
+            />
+            <div class="card-body bg-info text-white">
+              <h5 class="card-text text-center">CSS 3</h5>
+            </div>
+          </div>
+        </div>
+        <div class="col pt-3">
+          <div class="card mx-auto border-0" style="width: 14rem;">
+            <img
+              class="card-img-top"
+              src="assets/html5/html5-original.svg"
+              alt="Card image cap"
+            />
+            <div class="card-body bg-info text-white">
+              <h5 class="card-text text-center">HTML 5</h5>
+            </div>
+          </div>
+        </div>
+        <div class="col pt-3">
+          <div class="card mx-auto border-0" style="width: 14rem;">
+            <img
+              class="card-img-top"
+              src="assets/javascript/javascript-original.svg"
+              alt="Card image cap"
+            />
+            <div class="card-body bg-info text-white">
+              <h5 class="card-text text-center">Javascript</h5>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row py-3">
+        <div class="col pt-3">
+          <div class="card mx-auto border-0" style="width: 14rem;">
+            <img
+              class="card-img-top"
+              src="assets/mysql/mysql-original-wordmark.svg"
+              alt="Card image cap"
+            />
+            <div class="card-body bg-info text-white">
+              <h5 class="card-text text-center">MySql</h5>
+            </div>
+          </div>
+        </div>
+        <div class="col pt-3">
+          <div class="card mx-auto border-0" style="width: 14rem;">
+            <img
+              class="card-img-top"
+              src="assets/java/java-original.svg"
+              alt="Card image cap"
+            />
+            <div class="card-body bg-info text-white">
+              <h5 class="card-text text-center">Java</h5>
+            </div>
+          </div>
+        </div>
+        <div class="col pt-3">
+          <div class="card mx-auto border-0" style="width: 14rem;">
+            <img
+              class="card-img-top"
+              src="assets/python/python-original.svg"
+              alt="Card image cap"
+            />
+            <div class="card-body bg-info text-white">
+              <h5 class="card-text text-center">Python 3</h5>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
-    <div class="parallax pb-4 mt-3" id="debate"></div>
+    <div class="parallax pb-4 mt-3" id="debate">
+      <h1 class="text-center py-5">Debate Casefiles</h1>
+      <p class="text-center pt-0 pb-4">
+        These casefiles are a mix of evidence I gathered and pre-annotated evidence I
+        found. I do not own any/all of the work in these files. These are simply the
+        casefiles I used in tournaments.
+      </p>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col px-1 py-2">
+            <div
+              class="card shadow-lg mx-auto"
+              style="width: 19rem; min-height:16rem;"
+            >
+              <div class="card-body">
+                <h5 class="card-title">
+                  Public Forum Beedev Meme Casefile
+                </h5>
+                <p class="card-text">
+                  <strong>November-December 2018</strong>: The United States federal
+                  government should impose price controls on the pharmaceutical
+                  industry.
+                </p>
+                <h6>
+                  <a
+                    href="../../assets/debate/beedev/beedev2.docx"
+                    class="btn btn-primary"
+                    >Download Case</a
+                  >
+                  <a
+                    class="btn btn-warning px-1"
+                    rel="noopener noreferrer"
+                    href="../../assets/debate/beedev/checksum.txt"
+                    target="_blank"
+                    >Checksum</a
+                  >
+                </h6>
+              </div>
+            </div>
+          </div>
+          <div class="col px-1 py-2">
+            <div
+              class="card shadow-lg mx-auto"
+              style="width: 19rem; min-height:16rem;"
+            >
+              <div class="card-body">
+                <h5 class="card-title">
+                  Lincoln-Douglas Casefile
+                </h5>
+                <p class="card-text">
+                  <strong>September-October 2019</strong>: Universities ought not use
+                  standardized tests for undergraduate admissions decisions.
+                </p>
+                <h6>
+                  <a
+                    href="../../assets/debate/standardized/CollegeBoardOutfmymind.docx"
+                    class="btn btn-primary"
+                    >Download Case</a
+                  >
+                  <a
+                    class="btn btn-warning px-1"
+                    rel="noopener noreferrer"
+                    href="../../assets/debate/standardized/checksum.txt"
+                    target="_blank"
+                    >Checksum</a
+                  >
+                </h6>
+              </div>
+            </div>
+          </div>
+          <div class="col px-1 py-2">
+            <div
+              class="card shadow-lg mx-auto"
+              style="width: 19rem; min-height:16rem;"
+            >
+              <div class="card-body">
+                <h5 class="card-title">
+                  Lincoln-Douglas Casefile
+                </h5>
+                <p class="card-text">
+                  <strong>November-December 2019</strong>: The United States ought to
+                  eliminate subsidies for fossil fuels.
+                </p>
+                <h6>
+                  <a
+                    href="../../assets/debate/fossil-fuels/CoalBad.docx"
+                    class="btn btn-primary"
+                    >Download Case</a
+                  >
+                  <a
+                    class="btn btn-warning px-1"
+                    rel="noopener noreferrer"
+                    href="../../assets/debate/fossil-fuels/checksum.txt"
+                    target="_blank"
+                    >Checksum</a
+                  >
+                </h6>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
-    <div class="pb-4 mt-3 text-white" id="projects"></div>
+    <div class="pb-4 mt-3 text-white" id="projects">
+      <h1 class="text-center py-5 text-light">Projects</h1>
+      <div class="card border border-dark bg-dark text-light">
+        <div class="card-body">
+          <h5 class="card-title">Google Trends Election Predictor</h5>
+          <p class="card-text">
+            Using Google Trends to predict the United States 2020 Presidential
+            Election.
+          </p>
+          <a href="https://election.sambaumohl.com" class="btn btn-primary"
+            >Go There</a
+          >
+          <a
+            class="btn btn-success"
+            href="https://github.com/MeMeBigProgrammer/trends-election-predictor"
+            >Github</a
+          >
+        </div>
+      </div>
+      <div class="card border border-dark bg-dark text-light">
+        <div class="card-body">
+          <h5 class="card-title">MyMICDS.net</h5>
+          <p class="card-text">
+            An all-in-one platform for MICDS student life.
+          </p>
+          <a href="https://mymicds.net" class="btn btn-primary">Go There</a>
+          <a
+            class="btn btn-success"
+            href="https://github.com/MyMICDS/MyMICDS-v2-Angular"
+            >Github</a
+          >
+        </div>
+      </div>
+    </div>
 
-    <div class="parallax pb-4 mt-3" id="resume"></div>
+    <div class="parallax pb-4 mt-3" id="resume">
+      <h1 class="text-center py-5">Resume</h1>
+      <div class="pb-5">
+        <div class="card mx-auto mb-xs-3" style="max-width: 25rem;" id="loginCard">
+          <div class="card-body">
+            <h5 class="card-title">Password Required</h5>
+            <h6 class="card-subtitle mb-2 text-muted">
+              For privacy reasons, I won't publicly display my full resume.
+            </h6>
+            <form>
+              <div class="form-group">
+                <input
+                  class="form-control mr-1 d-inline-block"
+                  type="password"
+                  id="PasswordInput"
+                  placeholder="Password"
+                  style="width: 15rem;height: 2.5rem;"
+                />
+                <input
+                  class="btn btn-primary mb-1 d-inline-block"
+                  type="button"
+                  value="Submit"
+                  onclick="CheckPassword()"
+                />
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <div
       class="text-center text-white"
@@ -92,14 +335,6 @@
       </div>
     </div>
     <!-- Optional JavaScript -->
-    <script type="text/javascript">
-    $(function() {
-      $("#skills").load("/assets/homepage/skills.html");
-      $("#debate").load("/assets/homepage/debate.html");
-      $("#projects").load("/assets/homepage/projects.html");
-      $("#resume").load("/assets/homepage/resume.html");
-    });
-  </script>
     <script type="text/javascript" defer>
       window.jQuery ||
         document.write(
