--- a/source/index.html
+++ b/source/index.html
@@ -7,6 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <meta name="description" content="Sam Baumohl Personal Website">
     <!-- Bootstrap CSS -->
     <link
       rel="stylesheet"
