--- a/source/index.html
+++ b/source/index.html
@@ -14,29 +14,9 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
-      defer
     />
-    <!-- jQuery first, then Popper.js, then Bootstrap JS, then fallbacks for each -->
-    <script
-      src="https://code.jquery.com/jquery-3.4.1.min.js"
-      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-      crossorigin="anonymous"
-      defer
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-      crossorigin="anonymous"
-      defer
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous"
-      defer
-    ></script>
     <!--other meta tags -->
-    <link type="text/css" rel="stylesheet" href="assets/styles/style.css" async/>
+    <link type="text/css" rel="stylesheet" href="assets/styles/style.css"/>
     <script type="text/javascript" src="assets/scripts/resume.js" defer></script>
     <link
       rel="apple-touch-icon"
@@ -327,16 +307,30 @@
       <div class="mx-auto">
         <p>
           <a href="https://getbootstrap.com/">Bootstrap 4</a>,
-          <a href="https://popper.js.org/">popper.js</a>,
-          <a href="https://jquery.com/">jquery</a>,
           <a href="https://expressjs.com/">Express JS</a>, and
           <a href="https://konpa.github.io/devicon/">icons</a>.
         </p>
-        <p>Website Version 2.1</p>
+        <p>Website Version 2.3</p>
       </div>
     </div>
     <!-- Optional JavaScript -->
     <script type="text/javascript" defer>
+        var test = document.createElement("div")
+        test.className = "hidden d-none"
+
+        document.head.appendChild(test)
+        var cssLoaded = window.getComputedStyle(test).display === "none"
+        document.head.removeChild(test)
+        if (!cssLoaded) {
+            console.log("hey!");
+            var link = document.createElement("link");
+
+            link.rel = "stylesheet";
+            link.type= "text/css";
+            link.href = "dist/css/bootstrap.min.css";
+
+            document.head.appendChild(link);
+        }
         console.log(
           "super secret link: https://www.sambaumohl.com/passwords/secret.html"
         );
