--- a/source/index.html
+++ b/source/index.html
@@ -14,9 +14,10 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
+      async
     />
     <!--other meta tags -->
-    <link type="text/css" rel="stylesheet" href="assets/styles/style.css"/>
+    <link type="text/css" rel="stylesheet" href="assets/styles/style.css" async/>
     <script type="text/javascript" src="assets/scripts/resume.js" defer></script>
     <link
       rel="apple-touch-icon"
