--- a/source/index.html
+++ b/source/index.html
@@ -18,6 +18,7 @@
     />
     <!--other meta tags -->
     <link type="text/css" rel="stylesheet" href="assets/styles/style.css" async/>
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"/>
     <script type="text/javascript" src="assets/scripts/resume.js" defer></script>
     <link
       rel="apple-touch-icon"
@@ -42,7 +43,7 @@
   <body class="bg-dark text-dark">
     <div class="parallax fill-screen flex-center">
       <div class="d-inline-block">
-        <h1 class="position-relative text-center">
+        <h1 class="position-relative text-center" id="bigNameTitle">
           SamBaumohl.com
         </h1>
         <h4 class="text-center d-block mb-0">
@@ -100,7 +101,7 @@
               alt="Card image cap"
             />
             <div class="card-body bg-info text-white">
-              <h5 class="card-text text-center">MySql</h5>
+              <h5 class="card-text text-center">MySQL</h5>
             </div>
           </div>
         </div>
@@ -135,7 +136,7 @@
       <h1 class="text-center py-5">Debate Casefiles</h1>
       <p class="text-center pt-0 pb-4">
         These casefiles are a mix of evidence I gathered and pre-annotated evidence I
-        found. I do not own any/all of the work in these files. These are simply the
+        found. These are the
         casefiles I used in tournaments.
       </p>
       <div class="container-fluid">
@@ -311,7 +312,7 @@
           <a href="https://expressjs.com/">Express JS</a>, and
           <a href="https://konpa.github.io/devicon/">icons</a>.
         </p>
-        <p>Website Version 2.3</p>
+        <p>Website Version 2.4</p>
       </div>
     </div>
     <!-- Optional JavaScript -->
