reverts and padding

--- a/source/index.html
+++ b/source/index.html
@@ -283,14 +283,14 @@
             <form>
               <div class="form-group">
                 <input
-                  class="form-control mr-1 d-inline-block"
+                  class="form-control mr-1 mb-1 mt-2 d-inline-block"
                   type="password"
                   id="PasswordInput"
                   placeholder="Password"
                   style="width: 15rem;height: 2.5rem;"
                 />
                 <input
-                  class="btn btn-primary mb-1 d-inline-block"
+                  class="btn btn-primary mb-1 mt-1 d-inline-block"
                   type="button"
                   value="Submit"
                   onclick="CheckPassword()"
