Updated Skills, outlined contact links

--- a/source/index.html
+++ b/source/index.html
@@ -49,6 +49,22 @@
         <h4 class="text-center d-block mb-0">
           I am Sam Baumohl, a student and a junior developer.
         </h4>
+        <!-- <div class="site-links-group row mt-3" role="group" aria-label="Site Links">
+          <div class="col">
+            <button type="button" class="btn btn-success d-block mx-auto">Github
+              <img src="assets/svgs/github/github-original.svg" alt="drawing" width="20"/>
+            </button>
+          </div>
+          <div class="col">
+            <button type="button" class="btn btn-info d-block mx-auto">Keybase Profile
+              <img src="assets/svgs/keybase/Keybase_logo_official.svg" alt="drawing" width="20"/>
+            </button>
+          </div>
+          <div class="col">
+            <button type="button" class="btn btn-warning d-block mx-auto">PGP
+            <img src="assets/svgs/fa-key/key.svg" alt="drawing" width="20"/></button>
+          </div>
+        </div> -->
       </div>
     </div>
 
@@ -59,8 +75,8 @@
           <div class="card mx-auto border-0" style="width: 14rem;">
             <img
               class="card-img-top"
-              src="assets/css3/css3-original.svg"
-              alt="Card image cap"
+              src="assets/svgs/css3/css3-original.svg"
+              alt="CSS 3 Logo"
             />
             <div class="card-body bg-info text-white">
               <h5 class="card-text text-center">CSS 3</h5>
@@ -71,8 +87,8 @@
           <div class="card mx-auto border-0" style="width: 14rem;">
             <img
               class="card-img-top"
-              src="assets/html5/html5-original.svg"
-              alt="Card image cap"
+              src="assets/svgs/html5/html5-original.svg"
+              alt="HTML 5 Logo"
             />
             <div class="card-body bg-info text-white">
               <h5 class="card-text text-center">HTML 5</h5>
@@ -83,8 +99,8 @@
           <div class="card mx-auto border-0" style="width: 14rem;">
             <img
               class="card-img-top"
-              src="assets/javascript/javascript-original.svg"
-              alt="Card image cap"
+              src="assets/svgs/javascript/javascript-original.svg"
+              alt="JS Logo"
             />
             <div class="card-body bg-info text-white">
               <h5 class="card-text text-center">Javascript</h5>
@@ -97,11 +113,11 @@
           <div class="card mx-auto border-0" style="width: 14rem;">
             <img
               class="card-img-top"
-              src="assets/mysql/mysql-original-wordmark.svg"
-              alt="Card image cap"
+              src="assets/svgs/linux/linux-plain.svg"
+              alt="Linux Tux Logo"
             />
             <div class="card-body bg-info text-white">
-              <h5 class="card-text text-center">MySQL</h5>
+              <h5 class="card-text text-center">Linux</h5>
             </div>
           </div>
         </div>
@@ -109,8 +125,8 @@
           <div class="card mx-auto border-0" style="width: 14rem;">
             <img
               class="card-img-top"
-              src="assets/java/java-original.svg"
-              alt="Card image cap"
+              src="assets/svgs/java/java-original.svg"
+              alt="Java Logo"
             />
             <div class="card-body bg-info text-white">
               <h5 class="card-text text-center">Java</h5>
@@ -121,8 +137,8 @@
           <div class="card mx-auto border-0" style="width: 14rem;">
             <img
               class="card-img-top"
-              src="assets/python/python-original.svg"
-              alt="Card image cap"
+              src="assets/svgs/python/python-original.svg"
+              alt="Python 3"
             />
             <div class="card-body bg-info text-white">
               <h5 class="card-text text-center">Python 3</h5>
