--- a/source/index.html
+++ b/source/index.html
@@ -49,6 +49,26 @@
         <h4 class="text-center d-block mb-0">
           I am Sam Baumohl, a student and a junior developer.
         </h4>
+        <div class="site-links-group row mt-3" role="group" aria-label="Site Links">
+          <div class="col offset-md-1">
+            <a type="button" class="btn btn-success mx-auto"
+            href="https://github.com/MeMeBigProgrammer">Github
+              <img src="assets/svgs/github/github-original.svg" alt="github" width="20"/>
+            </a>
+          </div>
+          <div class="col">
+            <a type="button" class="btn btn-warning mx-auto"
+            href="assets/pgp/key.txt">PGP
+              <img src="assets/svgs/fa-key/key.svg" alt="key" width="20"/>
+            </a>
+          </div>
+          <div class="col">
+            <a type="button" class="btn btn-info mx-auto"
+            href="mailto:mail@sambaumohl.me">Email
+              <img src="assets/svgs/fa-mail/mail.svg" alt="email" width="20"/>
+            </a>
+          </div>
+        </div>
       </div>
     </div>
 
@@ -248,10 +268,8 @@
           <a
             class="btn btn-success"
             href="https://github.com/MyMICDS/MyMICDS-v2-Angular"
-            target="_blank"
-            >Github
-            <img src="assets/svgs/github/github-original.svg" alt="drawing" width="19"/>
-          </a>
+            >Github</a
+          >
         </div>
       </div>
     </div>
@@ -294,10 +312,11 @@
       <div class="mx-auto">
         <p>
           <a href="https://getbootstrap.com/">Bootstrap 4</a>,
-          <a href="https://expressjs.com/">Express JS</a>, and
-          <a href="https://konpa.github.io/devicon/">icons</a>.
+          <a href="https://expressjs.com/">Express JS</a>,
+          <a href="https://konpa.github.io/devicon/">icons</a>, and
+          <a href="https://fontawesome.com">Font Awesome</a>,
         </p>
-        <p>Website Version 2.4</p>
+        <p>Website Version 2.5</p>
       </div>
     </div>
     <!-- Optional JavaScript -->
