pgp redirect + button align

--- a/source/index.html
+++ b/source/index.html
@@ -50,19 +50,19 @@
           I am Sam Baumohl, a student and a junior developer.
         </h4>
         <div class="site-links-group row mt-3" role="group" aria-label="Site Links">
-          <div class="col offset-md-1">
+          <div class="col text-center">
             <a type="button" class="btn btn-success mx-auto"
             href="https://github.com/MeMeBigProgrammer">Github
               <img src="assets/svgs/github/github-original.svg" alt="github" width="20"/>
             </a>
           </div>
-          <div class="col">
+          <div class="col text-center">
             <a type="button" class="btn btn-warning mx-auto"
             href="assets/pgp/key.txt">PGP
               <img src="assets/svgs/fa-key/key.svg" alt="key" width="20"/>
             </a>
           </div>
-          <div class="col">
+          <div class="col text-center">
             <a type="button" class="btn btn-info mx-auto"
             href="mailto:mail@sambaumohl.me">Email
               <img src="assets/svgs/fa-mail/mail.svg" alt="email" width="20"/>
