--- a/source/index.html
+++ b/source/index.html
@@ -53,19 +53,19 @@
           <div class="col text-center">
             <a type="button" class="btn btn-success mx-auto"
             href="https://github.com/MeMeBigProgrammer">Github
-              <img src="assets/svgs/github/github-original.svg" alt="github" width="20"/>
+              <img src="assets/svgs/github/github-original.svg" alt="github" width="20" async/>
             </a>
           </div>
           <div class="col text-center">
             <a type="button" class="btn btn-warning mx-auto"
             href="assets/pgp/key.txt">PGP
-              <img src="assets/svgs/fa-key/key.svg" alt="key" width="20"/>
+              <img src="assets/svgs/fa-key/key.svg" alt="key" width="20" async/>
             </a>
           </div>
           <div class="col text-center">
             <a type="button" class="btn btn-info mx-auto"
             href="mailto:mail@sambaumohl.me">Email
-              <img src="assets/svgs/fa-mail/mail.svg" alt="email" width="20"/>
+              <img src="assets/svgs/fa-mail/mail.svg" alt="email" width="20" async/>
             </a>
           </div>
         </div>
