some styling changes

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
     <link rel="manifest" href="assets/favicons/site.webmanifest" />
   </head>
 
-  <body class="bg-dark text-dark h-100">
+  <body class="h-100" style="background-color: #18191A;">
     <app-root></app-root>
   </body>
 </html>
