Icon update + cpp

--- a/src/index.html
+++ b/src/index.html
@@ -27,9 +27,13 @@
       href="assets/favicons/favicon-16x16.png"
     />
     <link rel="manifest" href="assets/favicons/site.webmanifest" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css"
+    />
   </head>
 
-  <body class="h-100" style="background-color: #18191A;">
+  <body class="h-100" style="background-color: #18191a">
     <app-root></app-root>
   </body>
 </html>
